--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2017",
     "module": "commonjs",
     "removeComments": true,
     "watch": false,
@@ -10,6 +10,7 @@
     "alwaysStrict": true
   },
   "files": [
-    "src/lightbox.ts"
+    "src/lightbox.ts",
+    "src/cursor.ts"
   ]
 }
